fix: checkbox jumping

--- a/newspack-theme/sass/forms/_fields.scss
+++ b/newspack-theme/sass/forms/_fields.scss
@@ -72,8 +72,9 @@ input[type='checkbox'] {
 			url( "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' width='24' height='24'%3E%3Cpath d='M16.7 7.1l-6.3 8.5-3.3-2.5-.9 1.2 4.5 3.4L17.9 8z' fill='white'%3E%3C/path%3E%3C/svg%3E" )
 			0 0 no-repeat;
 		content: '';
-		display: none;
+		display: block;
 		height: 24px;
+		opacity: 0;
 		width: 24px;
 	}
 
@@ -82,7 +83,7 @@ input[type='checkbox'] {
 		border-color: transparent;
 
 		&::before {
-			display: block;
+			opacity: 1;
 		}
 	}
 
